@@ -9,7 +9,7 @@ $tmpunrar = $site->get()->tmpunrarpath;
 if ((count(glob("$tmpunrar/*",GLOB_ONLYDIR))) > 0)
 {
     echo "Removing dead folders from ".$tmpunrar."\n";
-    exec("rm -r ".$tmpunrar."/*");
+    exec("rm -rf ".$tmpunrar."/*");
 }
 
 $pieces = explode("                       ", $argv[1]);
